<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bhouts.taskplanner.ditTask"
    tools:showIn="@layout/activity_dit_task">


    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/taskName"
        android:layout_alignParentTop="true"
        android:hint="@string/TaskName_hint"
        android:inputType="text"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DONE"
        android:id="@+id/checkBox"
        android:layout_above="@+id/projectAttName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/projectAttName"
        android:layout_below="@+id/taskName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/ProjectName_hint"
        android:inputType="text"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notes"
        android:layout_below="@+id/projectAttName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/notes_hint"
        android:inputType="text"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/textDueDate"
        android:layout_below="@+id/notes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/due_hint"/>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/priority_choice"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textDueDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/taskName"
        android:layout_alignEnd="@+id/taskName" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/tag_choice"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/priority_choice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/priority_choice"
        android:layout_alignEnd="@+id/priority_choice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/priority_level_text"
        android:id="@+id/priority_level_textView"
        android:layout_alignBottom="@+id/priority_choice"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tag_text"
        android:id="@+id/tag_textView"
        android:layout_alignBottom="@+id/tag_choice"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ENTER"
        android:id="@+id/task_enter"
        android:layout_alignParentBottom="true"
        android:onClick="goHSfromTask"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/duration_text"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/pickerDurationH"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <NumberPicker
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/pickerDurationH"
        android:orientation="vertical"
        android:layout_below="@+id/tag_choice"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5"/>

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/duration_text_M"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView"
        android:layout_alignRight="@+id/tag_textView"
        android:layout_alignEnd="@+id/tag_textView"/>

    <NumberPicker
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/pickerDurationM"
        android:orientation="vertical"
        android:layout_below="@+id/tag_textView"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3"/>

    <NumberPicker
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/pickerDurationD"
        android:orientation="vertical"
        android:layout_below="@+id/tag_choice"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"/>

    <TextView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/duration_text_D"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/textView"
        android:layout_toLeftOf="@+id/pickerDurationH"
        android:layout_toStartOf="@+id/pickerDurationH"/>

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/duration_text_H"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/textView"
        android:layout_toLeftOf="@+id/checkBox"
        android:layout_toStartOf="@+id/checkBox"/>


</RelativeLayout>
